@@ -38,9 +38,9 @@ module ActionController #:nodoc:
     #
     #   class WeblogController < ActionController::Base
     #     def update
-    #       List.update(@params["list"]["id"], @params["list"])
-    #       expire_page :action => "show", :id => @params["list"]["id"]
-    #       redirect_to :action => "show", :id => @params["list"]["id"]
+    #       List.update(params[:list][:id], params[:list])
+    #       expire_page :action => "show", :id => params[:list][:id]
+    #       redirect_to :action => "show", :id => params[:list][:id]
     #     end
     #   end
     #
